--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- remember to upload to github when finished -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,6 +18,9 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/mystyles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume PDF</title>
 </head>
 
 <body id="page-top">
@@ -38,7 +42,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="tableau.html">tableau</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#tableau.html">tableau</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume.html">resume</a></li>
             </ul>
         </div>
     </nav>
@@ -60,7 +65,7 @@
                     <a class="social-icon" href="https://www.linkedin.com/in/nicholasreesbassett"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-square-x-twitter"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-square-twitter"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
@@ -80,6 +85,7 @@
                             multiple touchpoints for offshoring.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                    <br>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -240,11 +246,50 @@
                 </ul>
             </div>
         </section>
-    </div>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-</body>
+        <hr />
+        <section class="resume-section" id="tableau">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Tableau</h2>
 
-</html>
+</body>
+<!-- Bootstrap core JS-->
+
+<!-- Core theme JS-->
+<div class='tableauPlaceholder' id='viz1702494541631' style='position: relative'><noscript><a href='#'><img
+                alt='Dashboard 1 '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ta&#47;tableauHW_17024945044570&#47;Dashboard1&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='tableauHW_17024945044570&#47;Dashboard1' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ta&#47;tableauHW_17024945044570&#47;Dashboard1&#47;1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+    </object>
+    <script
+        type='text/javascript'>                    var divElement = document.getElementById('viz1702494541631'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1000px'; vizElement.style.height = '827px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1327px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <!-- Resume section -->
+    </section>
+    <hr>
+    <section class="resume-section" id="resume">
+        <div class="resume-section-content">
+            <h2 class="mb-5">Resume</h2>
+            <!-- Add your resume content here -->
+
+            <p><a href="resume.html">Here is the page that I actually made!</a></p>
+            <a href="../rootgaskin/assets/img/Bassett, Nicholas (1).pdf">Download Resume in PDF format</a>
+        </div>
+    </section>
+
+    <body>
+
+        <html>
