--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/nicholasreesbassett"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-square-twitter"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-icon" href="https://github.com/damilkers/is201final"><i
+                            class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://twitter.com/elonmusk"><i class="fab fa-square-twitter"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/zuck/"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </section>
